//
// Protocol buffers definition for a Ping service
//
syntax = "proto3";
package pt.ulisboa.tecnico.sec.candeeiros;

message PublicKey {
	bytes keyBytes = 1;
}

message OpenAccountRequest {
	PublicKey publicKey = 1;
	bytes signature = 2;
}

message OpenAccountResponse {
	enum AccountStatus {
		OPENED = 0;
		ALREADY_EXISTED = 1;
		KEY_FAILURE = 2;
	}
	AccountStatus status = 1;
}


message SendAmountRequest {
	PublicKey sourcePublicKey = 1;
	PublicKey destinationPublicKey = 2;
	// String to avoid the use of floats since they are not safe for money representations
	string amount = 3;
}

message SendAmountResponse {

}


// Defining a Service, a Service can have multiple RPC operations
service BankService {
	// Define a RPC operation
	rpc OpenAccount(OpenAccountRequest) returns (OpenAccountResponse);
	rpc SendAmount(SendAmountRequest) returns (SendAmountResponse);
}
