syntax = "proto3";
package pt.ulisboa.tecnico.sec.candeeiros;
import "Bank.proto";


// ***** Authenticated procedures *****
message OpenAccountIntentRequest {
    OpenAccountRequest openAccountRequest = 1;
    Nonce challengeNonce = 2;
    int32 timestamp = 3;
    Signature signature = 4;
}

message OpenAccountStatusRequest {
    OpenAccountRequest openAccountRequest = 1;
    OpenAccountResponse openAccountResponse = 2;
    Nonce challengeNonce = 3;
    int32 timestamp = 4;
    Signature signature = 5;
}

message OpenAccountAppliedRequest {
    OpenAccountRequest openAccountRequest = 1;
    Nonce challengeNonce = 2;
    int32 timestamp = 3;
    Signature signature = 4;
}

message SendAmountIntentRequest {
    SendAmountRequest sendAmountRequest = 1;
    Nonce challengeNonce = 2;
    int32 timestamp = 3;
    Signature signature = 4;
}

message SendAmountStatusRequest {
    SendAmountRequest sendAmountRequest = 1;
    SendAmountResponse sendAmountResponse = 2;
    Nonce challengeNonce = 3;
    int32 timestamp = 4;
    Signature signature = 5;
}

message SendAmountAppliedRequest {
    SendAmountRequest sendAmountRequest = 1;
    Nonce challengeNonce = 2;
    int32 timestamp = 3;
    Signature signature = 4;
}

message ReceiveAmountIntentRequest {
    ReceiveAmountRequest receiveAmountRequest = 1;
    Nonce challengeNonce = 2;
    int32 timestamp = 3;
    Signature signature = 4;
}

message ReceiveAmountStatusRequest {
    ReceiveAmountRequest receiveAmountRequest = 1;
    ReceiveAmountResponse receiveAmountResponse = 2;
    Nonce challengeNonce = 3;
    int32 timestamp = 4;
    Signature signature = 5;
}

message ReceiveAmountAppliedRequest {
    ReceiveAmountRequest receiveAmountRequest = 1;
    Nonce challengeNonce = 2;
    int32 timestamp = 3;
    Signature signature = 4;
}


// ***** Unauthenticated procedures *****

message CheckAccountSyncResponse {
	CheckAccountResponse checkAccountResponse = 1;
  int32 timestamp = 2;
	Signature signature = 3;
}

message AuditSyncResponse {
	AuditResponse auditResponse = 1;
  int32 timestamp = 2;
	Signature signature = 3;
}


// ***** SyncBanks Service
service SyncBanksService {
	// Open Account
  rpc OpenAccountSync(OpenAccountIntentRequest) returns (Ack);
	rpc OpenAccountIntent(OpenAccountIntentRequest) returns (Ack);
	rpc OpenAccountStatus(OpenAccountStatusRequest) returns (Ack);
	rpc OpenAccountApplied(OpenAccountAppliedRequest) returns (Ack);

	// Send Amount
  rpc SendAmountSync(SendAmountIntentRequest) returns (Ack);
	rpc SendAmountIntent(SendAmountIntentRequest) returns (Ack);
	rpc SendAmountStatus(SendAmountStatusRequest) returns (Ack);
	rpc SendAmountApplied(SendAmountAppliedRequest) returns (Ack);

	// Receive Amount
  rpc ReceiveAmountSync(ReceiveAmountIntentRequest) returns (Ack);
	rpc ReceiveAmountIntent(ReceiveAmountIntentRequest) returns (Ack);
	rpc ReceiveAmountStatus(ReceiveAmountStatusRequest) returns (Ack);
	rpc ReceiveAmountApplied(ReceiveAmountAppliedRequest) returns (Ack);

	rpc NonceNegotiation(NonceNegotiationRequest) returns (NonceNegotiationResponse);

	rpc CheckAccount(CheckAccountRequest) returns (CheckAccountResponse);
	rpc CheckAccountSync(CheckAccountRequest) returns (CheckAccountSyncResponse);

	rpc Audit(AuditRequest) returns (AuditResponse);
	rpc AuditSync(AuditRequest) returns (AuditSyncResponse);
}
